do not wrap paginator in italiano (bug 697719)

--- a/media/css/impala/paginator.less
+++ b/media/css/impala/paginator.less
@@ -46,7 +46,8 @@
 }
 
 html[lang=de],
-html[lang=id] {
+html[lang=id],
+html[lang=it] {
     .paginator {
         p {
             font-size: 11px;
